[package]
name = "scream-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "scream"
path = "src/main.rs"

[dependencies]
thiserror = "2.0.12"
anyhow = "1.0.98"
clap = "4.5.42"
indicatif = "0.18.0"
reqwest = "0.12.22"
tar = "0.4.38"
zstd = "0.13.3"
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
csv = "1.3.1"
toml = "0.9.4"
tracing-subscriber = "0.3.19"
screampp = { path = "../scream-core" }
