[package]
name = "scream-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "scream"
path = "src/main.rs"

[dependencies]
thiserror = "2.0.12"
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
indicatif = "0.18.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.22", features = ["stream"] }
tar = "0.4.38"
zstd = "0.13.3"
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
csv = "1.3.1"
toml = "0.9.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
screampp = { path = "../scream-core" }

[dev-dependencies]
tempfile = "3.20.0"
