[package]
name = "screampp"
description = "A modernized, high-performance library for protein side-chain placement based on the SCREAM method."
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
nalgebra = "0.33.2"
phf = { version = "0.12.1", features = ["macros"] }
serde = { version = "1.0.188", features = ["derive"] }
slotmap = "1.0.7"
thiserror = "2.0.12"
toml = "0.9.2"
csv = "1.3.1"
tracing = "0.1.41"
itertools = "0.14.0"
kiddo = "5.2.2"
rayon = { version = "1.8.0", optional = true }

[dev-dependencies]
tempfile = "3.20.0"

[features]
parallel = ["dep:rayon"]
