[package]
name = "scream-python-bindings"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lib]
name = "screampp"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.1"
screampp = { path = "../scream-core" }
